--- a/css/.github/workflows/Docker_build_push.yml
+++ b/css/.github/workflows/Docker_build_push.yml
@@ -7,21 +7,42 @@ jobs:
   dockerbuildpush:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Build and push
+
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/2025_website:latest
+
+  deploy-to-ec2:   
+    runs-on: ubuntu-latest
+    needs: dockerbuildpush
+    steps:
+      - name: Deploy to EC2 via SSH
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            echo " Pulling latest Docker image..."
+            docker login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+            docker pull ${{ vars.DOCKERHUB_USERNAME }}/2025_website:latest
+
+            echo " Stopping old container (if any)..."
+            docker stop 2025_website || true
+            docker rm 2025_website || true
+
+            echo " Running new container..."
+            docker run -d -p 80:80 --name 2025_website ${{ vars.DOCKERHUB_USERNAME }}/2025_website:latest
