--- a/.github/workflows/Docker_build_push.yml
+++ b/.github/workflows/Docker_build_push.yml
@@ -27,24 +27,24 @@ jobs:
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/2025_website:latest
 
-  deploy-to-ec2:
-    runs-on: ubuntu-latest
-    needs: dockerbuildpush
-    steps:
-      - name: Deploy to EC2 via SSH
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            echo " Pulling latest Docker image..."
-            docker login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-            docker pull ${{ vars.DOCKERHUB_USERNAME }}/2025_website:latest
+#   deploy-to-ec2:
+#     runs-on: ubuntu-latest
+#     needs: dockerbuildpush
+#     steps:
+#       - name: Deploy to EC2 via SSH
+#         uses: appleboy/ssh-action@v0.1.10
+#         with:
+#           host: ${{ secrets.EC2_HOST }}
+#           username: ubuntu
+#           key: ${{ secrets.EC2_SSH_KEY }}
+#           script: |
+#             echo " Pulling latest Docker image..."
+#             docker login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+#             docker pull ${{ vars.DOCKERHUB_USERNAME }}/2025_website:latest
 
-            echo " Stopping old container (if any)..."
-            docker stop 2025_website || true
-            docker rm 2025_website || true
+#             echo " Stopping old container (if any)..."
+#             docker stop 2025_website || true
+#             docker rm 2025_website || true
 
-            echo " Running new container..."
-            docker run -d -p 80:80 --name 2025_website ${{ vars.DOCKERHUB_USERNAME }}/2025_website:latest
+#             echo " Running new container..."
+#             docker run -d -p 80:80 --name 2025_website ${{ vars.DOCKERHUB_USERNAME }}/2025_website:latest
