--- a/.github/workflows/Docker_build_push.yml
+++ b/.github/workflows/Docker_build_push.yml
@@ -1,19 +1,19 @@
-name: ci
+name: CI - Build and Push to Docker Hub
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
-  dockerbuildpush:
+  build-and-push:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
+
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -21,11 +21,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/2025_website:latest
+          file: ./Dockerfile
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/2025_website:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/2025_website:${{ github.run_number }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Log out from Docker Hub
+        if: always()
+        run: docker logout
+
 
 #   deploy-to-ec2:
 #     runs-on: ubuntu-latest
